force-app/main/default/objects/Data_Security_Matrix__c/Data_Security_Matrix__c.object-meta.xml
<CustomObject>
    <description>Table to maintain data partition security matrix for each profile</description>
    <label>Data Security Matrix</label>
    <nameField>
        <displayFormat>SEC-{0000}</displayFormat>
        <label>Data Security Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Security Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>