force-app/main/default/objects/Data_Security_Matrix__c/fields/Access_Type__c.field-meta.xml
<CustomField>
    <fullName>Access_Type__c</fullName>
    <label>Access Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Authorize Only</fullName>
            </value>
            <value>
                <fullName>No Access</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>