force-app/main/default/objects/Data_Security_Matrix__c/fields/Data_Matrix_Key__c.field-meta.xml
<CustomField>
    <fullName>Data_Matrix_Key__c</fullName>
    <description>Profile_Name__c+Section_Name__c</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Data Matrix Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>