force-app/main/default/objects/Data_Security_Matrix__c/fields/Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Profile_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Profile Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>