force-app/main/default/objects/Data_Security_Matrix__c/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remark</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>