force-app/main/default/objects/Data_Security_Matrix__c/fields/Section_Name__c.field-meta.xml
<CustomField>
    <fullName>Section_Name__c</fullName>
    <label>Section Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ComCust:Account Information</fullName>
            </value>
            <value>
                <fullName>ComCust:Address Information</fullName>
            </value>
            <value>
                <fullName>ComCust:Campaign Lead History</fullName>
            </value>
            <value>
                <fullName>ComCust:Collateral</fullName>
            </value>
            <value>
                <fullName>ComCust:Contact Information</fullName>
            </value>
            <value>
                <fullName>ComCust:Contacts</fullName>
            </value>
            <value>
                <fullName>ComCust:Executive Summary/Account Plan</fullName>
            </value>
            <value>
                <fullName>ComCust:Other Information</fullName>
            </value>
            <value>
                <fullName>ComCust:Performance</fullName>
            </value>
            <value>
                <fullName>ComCust:Pipeline</fullName>
            </value>
            <value>
                <fullName>ComCust:Product On Hand</fullName>
            </value>
            <value>
                <fullName>ComCust:Product On Hand (Partition)</fullName>
            </value>
            <value>
                <fullName>ComCust:Risk Information</fullName>
            </value>
            <value>
                <fullName>ComCust:Wallet</fullName>
            </value>
            <value>
                <fullName>ComPros:Customer Information</fullName>
            </value>
            <value>
                <fullName>ComPros:Customer Source</fullName>
            </value>
            <value>
                <fullName>ComPros:Detail Information</fullName>
            </value>
            <value>
                <fullName>ComPros:General Information</fullName>
            </value>
            <value>
                <fullName>ComPros:Product Interest</fullName>
            </value>
            <value>
                <fullName>ComPros:Re-assignment Customer</fullName>
            </value>
            <value>
                <fullName>RtlCust:Address Information</fullName>
            </value>
            <value>
                <fullName>RtlCust:Alternative Contact Information</fullName>
            </value>
            <value>
                <fullName>RtlCust:Campaign History</fullName>
            </value>
            <value>
                <fullName>RtlCust:Contact Number and Email Address</fullName>
            </value>
            <value>
                <fullName>RtlCust:Customer Demographic (High)</fullName>
            </value>
            <value>
                <fullName>RtlCust:Customer Demographic (Low)</fullName>
            </value>
            <value>
                <fullName>RtlCust:Customer Demographic (Medium)</fullName>
            </value>
            <value>
                <fullName>RtlCust:Customer Insight - Personalized Information</fullName>
            </value>
            <value>
                <fullName>RtlCust:Customer Product Holding (High)</fullName>
            </value>
            <value>
                <fullName>RtlCust:Customer Product Holding (Low)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>