force-app/main/default/objects/Data_Security_Matrix__c/listViews/All1_CS.listView-meta.xml
<ListView>
    <fullName>All1_CS</fullName>
    <columns>NAME</columns>
    <columns>Section_Name__c</columns>
    <columns>Profile_Name__c</columns>
    <columns>Access_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Profile_Name__c</field>
        <operation>contains</operation>
    </filters>
    <label>All_CS</label>
</ListView>