force-app/main/default/objects/Data_Security_Matrix__c/listViews/All_Age.listView-meta.xml
<ListView>
    <fullName>All_Age</fullName>
    <columns>NAME</columns>
    <columns>Section_Name__c</columns>
    <columns>Profile_Name__c</columns>
    <columns>Access_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Profile_Name__c</field>
        <operation>contains</operation>
        <value>TMB Retail Channel Sale</value>
    </filters>
    <label>All_Age</label>
</ListView>