force-app/main/default/objects/Data_Security_Matrix__c/listViews/All_TMB_Retail_Channel_Sales.listView-meta.xml
<ListView>
    <fullName>All_TMB_Retail_Channel_Sales</fullName>
    <columns>NAME</columns>
    <columns>Section_Name__c</columns>
    <columns>Profile_Name__c</columns>
    <columns>Access_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Profile_Name__c</field>
        <operation>equals</operation>
        <value>TMB Retail Channel Sales</value>
    </filters>
    <label>All TMB Retail Channel Sales</label>
</ListView>